[tool.poetry]
name = "qiskit-tutorials"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.pylint.master]
python = "py38,py39,py310"
init-hook= "from pylint.config import find_default_config_files; import os, sys; sys.path.append(os.path.dirname([i for i in find_default_config_files()][0])+'/src/')"

[tool.pylint.messages_control]
disable = [
	"invalid-name",
	"trailing-whitespace",
	"missing-module-docstring",
	"unused-import",
	"wrong-import-position",
	"wrong-import-order",
	"pointless-statement",
	"consider-using-f-string",
	"reimported",
	"too-many-arguments",
	"line-too-long",
	"too-many-locals",
	"fixme",
	"duplicate-code",
	"no-else-return",
	"duplicate-code",
	"fixme",
]

[tool.poetry.dependencies]
python = "^3.8,<3.11"
matplotlib = "<3.3"
wheel = "^0.37.1"
jupyter = "^1.0.0"
Sphinx = "^4.5.0"
nbsphinx = "^0.8.8"
sphinx-rtd-theme = "^1.0.0"
networkx = "^2.8.1"
scikit-learn = "^1.1.0"
qiskit = {extras = ["visualization"], version = "^0.36.2"}
cvxpy = "^1.2.1"
pandoc = "^2.2"
graphviz = "^0.20"
nbqa = "^1.3.1"
pylint = "^2.13.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
